--- a/main.css
+++ b/main.css
@@ -3,11 +3,21 @@
     margin-inline: 0;
 }
 
-section > div{
-    display: flex;
-    justify-content:space-between;
-    padding: 70px 10px;
+section {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+    gap: 10px;
+    margin-top: 40px;
+    margin-bottom: 40px;
 }
+
+
+.opts{
+    padding: 12px;
+    text-align: center;
+}
+
+
 .lightBlue{
     background-color: rgb(0,186,242);
     color: white;
@@ -23,10 +33,5 @@ h1{
 }
 
 img{
-    width: 40%;
-}
-
-.opts{
-    width: 15%;
-    padding: 12px;
+    width: 60%;
 }
